--- a/BusOne/src/classes/BOT_Call_Edit_Extn.cls
+++ b/BusOne/src/classes/BOT_Call_Edit_Extn.cls
@@ -1,6 +1,6 @@
 public class BOT_Call_Edit_Extn 
 {
-    Public Id callId{get;set;}                     //Used to store the Call record ID
+    Public Id callId1{get;set;}                     //Used to store the Call record ID
     public List<Product__c> productList = new List<Product__c>();
     public product__c productSingle {get;set;}
     public BOT_Call_Edit_Extn()
